# base_module

./: .env.example  .gitignore  Justfile  README.html  README.md  TODO.md  TODO.txt  create-module-docker-compose.sh  docker-compose-base-dev.yml  docker-compose-module.yml  docker-compose.yml  jest.config.js  package-lock.json
backend/: Dockerfile  docker-compose.yml
backend/backend/: README.md  pyproject.toml
backend/backend/app/app/: serializers.py  settings.py  urls.py  views.py
backend/backend/app/app/templates/admin/: base_site.html
backend/backend/app/django_openehr/models/: person_name.py
backend_database/: Dockerfile  entrypoint.sh  pyproject.toml
backend_database/app/: create_next_user.py  settings.py
backend_database/app/app/: database_router.py  settings.py  urls.py
backend_database/app/core/: admin.py  models.py  serializers.py  urls.py  views.py
backend_database/app/core/migrations/: 0001_initial.py  0002_alter_uiuser_options_uiuser_password.py
backend_database/app/patients/: admin.py  models.py  serializers.py  urls.py  views.py
backend_database/app/patients/management/commands/: create_fake_patients.py
backend_database/app/patients/migrations/: 0001_initial.py  0002_alter_patient_phone_number.py  0003_patient_sex.py
backend_database_old/: Dockerfile  database_router.py  pyproject.toml
backend_database_old/app/: settings.py  urls.py
backend_database_old/app/api/: views.py
backend_database_old/patients/: models.py
backend_database_old/patients/migrations/: 0001_initial.py
backend_openEHR/: .gitignore  docker-compose.yml
frontend/: Dockerfile  next.config.ts  (+2 more)
(+29 files in other folders)
