[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Let's Do Digital"}
]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "app" }
]